demo/force-app/main/default/objects/Sharing_Audit_Log__c/Sharing_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Sharing Audit Log</label>
    <nameField>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sharing Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>