demo/force-app/main/default/objects/Sharing_Audit_Log__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><type>Picklist</type><label>Status</label><valueSet>
        <valueSetDefinition>
            <value><fullName>Passed</fullName><default>false</default><label>Passed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet></CustomField>