demo/force-app/main/default/objects/Sharing_Audit_Log__c/fields/Total_Expected__c.field-meta.xml
<CustomField><fullName>Total_Expected__c</fullName><type>Number</type><scale>0</scale><precision>18</precision><label>Total Expected</label></CustomField>